Update FAQ: Add new questions, move missing values question to Data & Export, remove NPS reference, add JavaScript requirement question

--- a/public/faq.html
+++ b/public/faq.html
@@ -513,19 +513,6 @@
                         </div>
                     </div>
 
-                    <div class="faq-item" data-keywords="NPS difference comparison">
-                        <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>How is this different from NPS?</h3>
-                            <span class="faq-toggle">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p><strong>Traditional recommendation scores and segmentor.app complement each other perfectly.</strong></p>
-                            <p><strong>Recommendation scores give you a single metric asking, 'Would you recommend us?'</strong></p>
-                            <p><strong>Segmentor.app adds context by showing why customers behave that way—plotting them across satisfaction and loyalty.</strong></p>
-                            <p><strong>Great news:</strong> If you already collect recommendation scores, you can use those as your loyalty metric in segmentor.app! Many of our users do exactly that. Recommendation scores tell you the number; we help you understand the segments behind it.</p>
-                        </div>
-                    </div>
-
                     <div class="faq-item" data-keywords="advocate apostle characteristics">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>What makes someone an Apostle?</h3>
@@ -654,6 +641,28 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
                         </div>
                     </div>
 
+                    <div class="faq-item" data-keywords="employee experience EX data employee surveys">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Can I use segmentor.app for employee experience (EX) data?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Yes, absolutely! The tool works excellently for employee experience surveys too. Simply map your employee metrics accordingly—use satisfaction scores for job satisfaction and loyalty scores for retention likelihood.</p>
+                            <p>Teresa Monroe's team often uses segmentor.app for dual CX/EX analysis, helping organisations understand both customer and employee experience in parallel.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="import data Google Forms Excel other tools">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Can I import data from other tools like Google Forms or Excel?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Yes! Most tools support CSV export, which is all you need. Simply export your data from Google Forms, Excel, Microsoft Forms, Qualtrics, or any other survey platform as a CSV file, then upload it to segmentor.app.</p>
+                            <p>Ensure your exported CSV includes satisfaction and loyalty columns (or equivalent metrics), and the tool will handle the rest.</p>
+                        </div>
+                    </div>
+
                     <div class="faq-item" data-keywords="sample data try without data demo data test data explore mode">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>Can I try it without my own data?</h3>
@@ -669,13 +678,14 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
                         </div>
                     </div>
 
-                    <div class="faq-item" data-keywords="data limit maximum entries file size limit">
+                    <div class="faq-item" data-keywords="data limit maximum entries file size limit dataset size">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>Is there a limit to how much data I can upload?</h3>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>No, there's no hard limit on the amount of data you can upload. The tool processes everything locally in your browser, so the practical limit depends on your device's performance. Most users work comfortably with thousands of entries.</p>
+                            <p>No, there's no hard limit on the amount of data you can upload. The tool processes everything locally in your browser, so the practical limit depends on your device's performance.</p>
+                            <p>Most laptops handle 5,000+ entries comfortably, and many users work with up to 10,000 rows without issues. Performance may vary based on your hardware specifications.</p>
                             <p>In demo mode, there's a 100-entry limit to showcase the tool's capabilities.</p>
                         </div>
                     </div>
@@ -881,6 +891,17 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                     </div>
 
+                    <div class="faq-item" data-keywords="normalisation accuracy scale conversion accuracy">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>How accurate is the auto-normalisation for different scales?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Highly accurate for standard scales. The tool converts scale equivalents linearly, preserving the proportional relationships between values. For example, a score of 4 on a 1-5 scale maps proportionally to 7.5 on a 1-10 scale.</p>
+                            <p>Custom scales are detected proportionally based on their range. You can test the normalisation with sample data to verify the conversion matches your expectations.</p>
+                        </div>
+                    </div>
+
                     <div class="faq-item" data-keywords="frequency clustering, overlapping points, multiple responses">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>How does the tool handle overlapping data points?</h3>
@@ -1035,6 +1056,17 @@ CUST002,6,4,Jane Doe</pre>
                             </div>
                         </div>
                     </div>
+
+                    <div class="faq-item" data-keywords="custom features integrations partnerships feedback">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What if I need custom features or integrations?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>We're open to feedback and always interested in hearing about your needs! Email us with your requests, and we'll consider them for future updates.</p>
+                            <p>For partnerships and enterprise needs, custom setups can be arranged. Teresa Monroe's partnership, for example, includes custom configurations tailored to their consulting workflows.</p>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Data & Export Section -->
@@ -1062,6 +1094,23 @@ CUST002,6,4,Jane Doe</pre>
                                 <li>✅ Analysis notes</li>
                             </ul>
                             <p><strong>To load it later:</strong> Use the Load button and select your .seg file. Everything will be restored exactly as you left it.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="missing values errors CSV errors data validation">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What if my data has missing values or errors?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The tool handles common issues gracefully. When you upload your CSV:</p>
+                            <ul>
+                                <li><strong>Missing scores:</strong> Rows with missing satisfaction or loyalty values are flagged for review. You can edit or exclude them directly in the data table.</li>
+                                <li><strong>Invalid values:</strong> Non-numeric values or scores outside your scale range are automatically detected and reported.</li>
+                                <li><strong>Header names:</strong> The tool automatically detects satisfaction and loyalty columns even if they're named slightly differently (e.g., "Satisfaction", "Satisfaction Score", "Sat"). However, if your headers are completely different, you may need to rename them to include "Satisfaction" and "Loyalty" in the column names.</li>
+                                <li><strong>Bulk errors:</strong> If multiple rows have issues, the tool shows a detailed error report. Simply correct your CSV and re-upload.</li>
+                            </ul>
+                            <p>The tool will display specific error messages indicating which rows have problems and how to fix them, so you can address issues quickly.</p>
                         </div>
                     </div>
 
@@ -1106,10 +1155,39 @@ CUST002,6,4,Jane Doe</pre>
                             <p>The Action Plan includes:</p>
                             <ul>
                                 <li><strong>Proximity Analysis:</strong> Identifies customers close to quadrant boundaries who could be converted</li>
-                                <li><strong>Recommendation Score:</strong> Calculates your overall NPS-style score</li>
+                                <li><strong>Recommendation Score:</strong> Calculates your overall recommendation score</li>
                                 <li><strong>Response Concentration:</strong> Shows where most responses cluster</li>
                                 <li><strong>Strategic Priorities:</strong> Highlights high-impact opportunities</li>
                             </ul>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="recommendation converter metrics calculate loyalty score">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What metrics does the Recommendation Converter calculate?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The Recommendation Converter computes a loyalty score using the formula: <strong>(% Promoters - % Detractors) × 100</strong>, which gives you a score ranging from -100 to +100.</p>
+                            <p>It categorises your customers into:</p>
+                            <ul>
+                                <li><strong>Promoters:</strong> High loyalty scores (typically 9-10 on a 0-10 scale, or equivalent on other scales)</li>
+                                <li><strong>Passives:</strong> Moderate loyalty scores (typically 7-8 on a 0-10 scale)</li>
+                                <li><strong>Detractors:</strong> Low loyalty scores (typically 0-6 on a 0-10 scale)</li>
+                            </ul>
+                            <p>The report also sets conversion targets per segment, helping you understand which customers are most likely to move between categories with targeted interventions.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="interpret proximity analysis at-risk customers boundaries">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>How do I interpret the Proximity Analysis?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Proximity Analysis highlights at-risk customers near quadrant boundaries—those who could easily move between segments with small changes in satisfaction or loyalty.</p>
+                            <p>The report suggests specific interventions for each segment. For example, it might recommend targeted actions to convert Mercenaries (high satisfaction, low loyalty) into Advocates by focusing on loyalty-building initiatives.</p>
+                            <p>This analysis helps you prioritise your efforts on customers who are closest to moving into more valuable quadrants, maximising the impact of your interventions.</p>
                         </div>
                     </div>
                 </div>
@@ -1160,13 +1238,14 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                     </div>
 
-                    <div class="faq-item" data-keywords="mobile tablet phone responsive">
+                    <div class="faq-item" data-keywords="mobile tablet phone responsive mobile app">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>Can I use the tool on mobile devices?</h3>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
                             <p>Yes! The tool is fully responsive and works on mobile devices and tablets. All features are available, though some may be optimised for touch interaction on smaller screens.</p>
+                            <p>There isn't a dedicated mobile app yet—the tool is web-based and desktop-optimised. Mobile devices may show a warning, but the basics work in landscape orientation. For the best experience, we recommend using a desktop or laptop computer.</p>
                         </div>
                     </div>
 
@@ -1252,6 +1331,17 @@ CUST002,6,4,Jane Doe</pre>
                         </div>
                         <div class="faq-answer">
                             <p>Yes! Once the page has loaded, you can work completely offline. All processing happens in your browser, so no internet connection is required after the initial page load.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="JavaScript disabled enable JavaScript required">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What if JavaScript is disabled?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The tool requires JavaScript to function—it's essential for local processing in your browser. If JavaScript is disabled, the tool won't work.</p>
+                            <p>Please enable JavaScript in your browser settings for full functionality. All modern browsers have JavaScript enabled by default, so this is rarely an issue.</p>
                         </div>
                     </div>
 
