Remove Brand+ references from Terms and Privacy pages, replace with Teresa Monroe staff

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -276,17 +276,17 @@ body {
 
         <h2>No Tracking Cookies</h2>
         <p>
-            <strong>We do not use tracking cookies.</strong> Standard users enjoy completely cookie-free browsing. Brand+ users only require a one-time authentication cookie during initial login, which is immediately moved to local storage—no cookies needed afterward.
+            <strong>We do not use tracking cookies.</strong> Standard users enjoy completely cookie-free browsing. Teresa Monroe staff members only require a one-time authentication cookie during initial login, which is immediately moved to local storage—no cookies needed afterward.
         </p>
 
-        <h2>Brand+ Authentication</h2>
+        <h2>Teresa Monroe Staff Authentication</h2>
         <p>
-            For Brand+ users, authentication is handled through Cloudflare Access. This process:
+            For Teresa Monroe staff members, authentication is handled through Cloudflare Access. This process:
         </p>
         <ul>
             <li>Uses a secure authentication token stored locally (not in cookies)</li>
             <li>Does not collect or store personal information on our servers</li>
-            <li>Only verifies your access to Brand+ features</li>
+            <li>Only verifies your access to Teresa Monroe staff features</li>
             <li>Does not track your usage or activity</li>
         </ul>
 
@@ -306,7 +306,7 @@ body {
             We use minimal third-party services:
         </p>
         <ul>
-            <li><strong>Cloudflare:</strong> For hosting and Brand+ authentication only. Cloudflare Access handles authentication but does not provide us with your personal data.</li>
+            <li><strong>Cloudflare:</strong> For hosting and Teresa Monroe staff authentication only. Cloudflare Access handles authentication but does not provide us with your personal data.</li>
             <li><strong>Font Services:</strong> Google Fonts may be loaded from Google's CDN, which is subject to Google's privacy policy.</li>
         </ul>
         <p>
