--- a/public/terms.html
+++ b/public/terms.html
@@ -259,7 +259,7 @@ body {
             <li>Processes customer data locally in your web browser</li>
             <li>Provides visualization and analysis of customer satisfaction and loyalty data</li>
             <li>Generates reports and insights based on the Apostles Model methodology</li>
-            <li>Offers optional Brand+ features for custom branding</li>
+            <li>Offers advanced features for Teresa Monroe staff members</li>
         </ul>
         <p>
             The service is provided "as is" and we reserve the right to modify, suspend, or discontinue any aspect of the service at any time.
@@ -325,9 +325,9 @@ body {
             You retain all rights to your data and any reports or outputs generated using the service.
         </p>
 
-        <h2>Brand+ Subscription</h2>
+        <h2>Teresa Monroe Staff Access</h2>
         <p>
-            Brand+ is a premium subscription service that provides additional features:
+            Teresa Monroe staff members have access to additional features:
         </p>
         <ul>
             <li>Custom logo upload and branding</li>
@@ -335,12 +335,11 @@ body {
             <li>Advanced watermark controls</li>
         </ul>
         <p>
-            Brand+ subscriptions are subject to:
+            Access to these features is granted through authentication and is subject to:
         </p>
         <ul>
-            <li>Payment terms as specified at the time of purchase</li>
-            <li>Automatic renewal unless cancelled</li>
-            <li>Refund policies as specified at purchase</li>
+            <li>Verification of Teresa Monroe staff status</li>
+            <li>Compliance with these Terms of Service</li>
             <li>Access restrictions based on authentication status</li>
         </ul>
 
