Convert American English to British English in Terms and Privacy pages

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -276,7 +276,7 @@ body {
 
         <h2>No Tracking Cookies</h2>
         <p>
-            <strong>We do not use tracking cookies.</strong> Standard users enjoy completely cookie-free browsing. Teresa Monroe staff members only require a one-time authentication cookie during initial login, which is immediately moved to local storage—no cookies needed afterward.
+            <strong>We do not use tracking cookies.</strong> Standard users enjoy completely cookie-free browsing. Teresa Monroe staff members only require a one-time authentication cookie during initial login, which is immediately moved to local storage—no cookies needed afterwards.
         </p>
 
         <h2>Teresa Monroe Staff Authentication</h2>
