--- a/public/terms.html
+++ b/public/terms.html
@@ -257,7 +257,7 @@ body {
         </p>
         <ul>
             <li>Processes customer data locally in your web browser</li>
-            <li>Provides visualization and analysis of customer satisfaction and loyalty data</li>
+            <li>Provides visualisation and analysis of customer satisfaction and loyalty data</li>
             <li>Generates reports and insights based on the Apostles Model methodology</li>
             <li>Offers advanced features for Teresa Monroe staff members</li>
         </ul>
