--- a/public/terms.html
+++ b/public/terms.html
@@ -358,7 +358,7 @@ body {
 
         <h2>Governing Law</h2>
         <p>
-            These Terms shall be governed by and construed in accordance with applicable laws, without regard to conflict of law provisions.
+            These Terms shall be governed by and construed in accordance with the laws of England and Wales, without regard to conflict of law provisions.
         </p>
 
         <h2>Contact Information</h2>
