--- a/public/privacy.html
+++ b/public/privacy.html
@@ -221,6 +221,59 @@ body {
 .policy-content a:hover {
     text-decoration: underline;
 }
+
+/* Footer Styles */
+.site-footer {
+    background: #f8f9fa;
+    border-top: 1px solid #e5e7eb;
+    padding: 32px 0;
+    margin-top: 64px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
+
+.footer-content p {
+    margin: 0;
+    color: #6b7280;
+    font-size: 0.875rem;
+}
+
+.footer-nav {
+    display: flex;
+    gap: 24px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-nav a {
+    color: #6b7280;
+    font-size: 0.75rem;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.footer-nav a:hover {
+    color: #3a863e;
+}
+
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        gap: 16px;
+        text-align: center;
+    }
+    
+    .footer-nav {
+        flex-direction: column;
+        gap: 8px;
+    }
+}
     </style>
 </head>
 <body>
