Add favicon links to all HTML pages

--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -151,6 +151,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting... - segmentor.app</title>
     <meta http-equiv="refresh" content="0; url=/brand-plus.html?auth=success">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script>
         // Immediate redirect after Cloudflare Access authentication
         window.location.href = '/brand-plus.html?auth=success';
