--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <title>segmentor.app - Professional Customer Segmentation Tool</title>
     <meta http-equiv="refresh" content="0; url=/tool/">
     <link rel="canonical" href="https://segmentor.app/tool/" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
