--- a/public/pricing.html
+++ b/public/pricing.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting to Brand+...</title>
     <meta http-equiv="refresh" content="0; url=/brand-plus.html">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script>
         // Immediate redirect
         window.location.href = '/brand-plus.html';
