--- a/public/terms.html
+++ b/public/terms.html
@@ -7,6 +7,12 @@
 
 
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service - segmentor.app</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
 <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
