Standardize favicon links across all pages (add 32x32, 16x16, apple-touch-icon)

--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -153,6 +153,9 @@
     <meta http-equiv="refresh" content="0; url=/brand-plus.html?auth=success">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
     <script>
         // Immediate redirect after Cloudflare Access authentication
         window.location.href = '/brand-plus.html?auth=success';
