--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link rel="canonical" href="https://segmentor.app/tool/" />
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
     <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
