--- a/public/terms.html
+++ b/public/terms.html
@@ -12,6 +12,9 @@
     <title>Terms of Service - segmentor.app</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.ico">
 
 <style>
 /* Font Face Declarations - Using Local Fonts */
