Fix Qualtrics snippet: format script in head and add div in body for public visibility

--- a/public/contact.html
+++ b/public/contact.html
@@ -87,17 +87,23 @@
     
     <!-- Qualtrics Website Feedback Snippet - Moved to head per Qualtrics documentation -->
     <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
-    <!-- IMPORTANT: If intercept is not loading, verify the deployment code in Qualtrics Deployment tab -->
-    <!-- Zone ID: ZN_11X8CuCOswXGKnC -->
+
     <script type='text/javascript'>
+
     (function(){var g=function(g){
+
     this.go=function(){var a=document.createElement("script");a.type="text/javascript";a.src=g;document.body&&document.body.appendChild(a)};
+
     this.start=function(){var t=this;"complete"!==document.readyState?window.addEventListener?window.addEventListener("load",function(){t.go()},!1):window.attachEvent&&window.attachEvent("onload",function(){t.go()}):t.go()};};
+
     try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtrics.com/SIE/?Q_ZID=ZN_11X8CuCOswXGKnC")).start()}catch(i){}})();
+
     </script>
-    <!--END QUALTRICS WEBSITE FEEDBACK SNIPPET-->
+    <!--END WEBSITE FEEDBACK SNIPPET-->
 </head>
 <body>
+
+<div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 
 <nav class="main-navigation">
   <div class="nav-container">
