Fix Qualtrics: Remove duplicate div, make survey section visible for Qualtrics injection

--- a/public/contact.html
+++ b/public/contact.html
@@ -119,9 +119,6 @@
   </div>
 </nav>
 
-
-<div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
-
     <!-- Cross-Browser Compatibility & Reset Styles -->
     <style>
 /* Font Face Declarations - Using Local Fonts */
@@ -376,7 +373,7 @@
             </div>
 
             <!-- Contact Form / Qualtrics Survey Section -->
-            <div class="section" id="survey-section" style="display: none;">
+            <div class="section" id="survey-section">
                 <h2 id="contact-form-heading" style="font-family: 'Montserrat', sans-serif; font-size: 2.2rem; font-weight: 600; color: #2c3e50; margin-bottom: 20px; text-align: center;">Get in Touch</h2>
                 
                 <div style="background: #f0f9f4; border-left: 4px solid #3a863e; border-radius: 6px; padding: 16px 20px; margin-bottom: 32px;">
