Fix Qualtrics snippet: Add div immediately after body tag to match original snippet structure

--- a/public/contact.html
+++ b/public/contact.html
@@ -102,6 +102,7 @@
     <!--END WEBSITE FEEDBACK SNIPPET-->
 </head>
 <body>
+<div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 
 <nav class="main-navigation">
   <div class="nav-container">
@@ -384,9 +385,9 @@
                 
                 <!-- Qualtrics Site Intercept Embed -->
                 <!-- Creative Insertion Point ID: ZN_11X8CuCOswXGKnC -->
+                <!-- Note: The Qualtrics div is at the top of the body. Content will be moved here when survey loads. -->
                 <div class="qualtrics-survey-container" id="qualtrics-survey">
-                    <!-- Target div for Qualtrics creative insertion -->
-                    <div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
+                    <!-- Qualtrics content will be moved here from the div at the top of the body -->
                 </div>
             </div>
 
