Fix Qualtrics snippet: Keep entire snippet as single unit in head section as provided by Qualtrics

--- a/public/contact.html
+++ b/public/contact.html
@@ -85,7 +85,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.ico">
     
-    <!-- Qualtrics Website Feedback Snippet - Moved to head per Qualtrics documentation -->
+    <!-- Qualtrics Website Feedback Snippet - Complete snippet in head as provided by Qualtrics -->
     <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
 
     <script type='text/javascript'>
@@ -98,11 +98,11 @@
 
     try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtrics.com/SIE/?Q_ZID=ZN_11X8CuCOswXGKnC")).start()}catch(i){}})();
 
-    </script>
+    </script><div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
+
     <!--END WEBSITE FEEDBACK SNIPPET-->
 </head>
 <body>
-<div id='ZN_11X8CuCOswXGKnC'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 
 <nav class="main-navigation">
   <div class="nav-container">
