Remove outdated premium options reference from About page

--- a/public/about.html
+++ b/public/about.html
@@ -919,7 +919,7 @@
                             </svg>
                         </div>
                         <h3 style="color: #3a863e; margin-bottom: 8px; font-size: 1.125rem; font-weight: 600;">Free to Use</h3>
-                        <p style="color: #666; font-size: 0.95rem;">All core features are free. Premium options available for custom branding only.</p>
+                        <p style="color: #666; font-size: 0.95rem;">All features are completely free to use.</p>
                     </div>
                 </div>
                 
