Fix SEO issues: add descriptive link text and fix consulting services button link

--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Combine satisfaction AND loyalty into instant segments, then get strategic roadmaps for each. segmentor.app solves the #1 CX frustration: 'We have scores, now what?' Privacy-first, no registration needed. Free to use.">
     <meta name="keywords" content="apostles model methodology, customer segmentation software, privacy-first customer analytics, local data processing, GDPR compliant analytics, customer loyalty measurement, satisfaction analysis tool, no tracking analytics" />
     <meta name="author" content="segmentor.app" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, follow, noai, noimageai" />
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
     
@@ -500,7 +500,7 @@
                         </div>
                         <p style="font-size: 1.1em; line-height: 1.6; margin-bottom: 20px;">That's why we've partnered with <strong>Teresa Monroe</strong>, Europe's leading Customer Experience (CX) and Employee Experience (EX) consulting agency. Whether you need help designing your CX program from the ground up or want expert analysis of your segmentation results, Teresa Monroe brings decades of experience turning customer data into business transformation.</p>
                         <div style="display: flex; gap: 16px; flex-wrap: wrap; align-items: center;">
-                            <a href="#" class="btn btn-primary" style="background: #3a863e; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: background-color 0.2s;">Explore Consulting Services <span aria-hidden="true">→</span></a>
+                            <a href="/contact.html" class="btn btn-primary" style="background: #3a863e; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: background-color 0.2s;">Explore Consulting Services <span aria-hidden="true">→</span></a>
                             <img src="/tm-logo.png" alt="Teresa Monroe" style="height: 24px; opacity: 0.7; margin-left: 8px;" />
                         </div>
                     </div>
