Fix navigation link text for SEO

--- a/public/about.html
+++ b/public/about.html
@@ -185,7 +185,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start Customer Segmentation Analysis</a>
     </div>
   </div>
 </nav>
