UX improvements: button naming, focus styling, FAQ search, proximity classification

--- a/public/contact.html
+++ b/public/contact.html
@@ -119,6 +119,7 @@ try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtric
   </div>
 </nav>
 
+
     <!-- Cross-Browser Compatibility & Reset Styles -->
     <style>
 /* Font Face Declarations - Using Local Fonts */
@@ -176,6 +177,13 @@ try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtric
 
 .logo-text:focus {
   text-decoration: none !important;
+  outline: none;
+}
+
+.logo-text:focus-visible {
+  outline: 2px solid #3a863e;
+  outline-offset: 2px;
+  border-radius: 4px;
 }
 
 .logo-segmentor {
@@ -214,6 +222,16 @@ try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtric
 
 .nav-link:hover {
   color: #3a863e;
+}
+
+.nav-link:focus {
+  outline: none;
+}
+
+.nav-link:focus-visible {
+  outline: 2px solid #3a863e;
+  outline-offset: 2px;
+  border-radius: 4px;
 }
 
 .nav-link-primary {
