--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -57,6 +57,13 @@
 
 .logo-text:focus {
   text-decoration: none !important;
+  outline: none;
+}
+
+.logo-text:focus-visible {
+  outline: 2px solid #3a863e;
+  outline-offset: 2px;
+  border-radius: 4px;
 }
 
 .logo-segmentor {
@@ -95,6 +102,16 @@
 
 .nav-link:hover {
   color: #3a863e;
+}
+
+.nav-link:focus {
+  outline: none;
+}
+
+.nav-link:focus-visible {
+  outline: 2px solid #3a863e;
+  outline-offset: 2px;
+  border-radius: 4px;
 }
 
 .nav-link-primary {
