--- a/public/contact.html
+++ b/public/contact.html
@@ -122,6 +122,10 @@ try{(new g("https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtric
 
     <!-- Cross-Browser Compatibility & Reset Styles -->
     <style>
+/* Global focus states - remove outline for mouse clicks, keep for keyboard */
+*:focus { outline: none; }
+*:focus-visible { outline: 2px solid #3a863e; outline-offset: 2px; border-radius: 4px; }
+
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
   font-family: 'Montserrat';
