--- a/public/faq.html
+++ b/public/faq.html
@@ -47,6 +47,10 @@
 
     <!-- Cross-Browser Compatibility & Reset Styles -->
     <style>
+/* Global focus states - remove outline for mouse clicks, keep for keyboard */
+*:focus { outline: none; }
+*:focus-visible { outline: 2px solid #3a863e; outline-offset: 2px; border-radius: 4px; }
+
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
   font-family: 'Montserrat';
