--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.ico">
     <style>
+/* Global focus states - remove outline for mouse clicks, keep for keyboard */
+*:focus { outline: none; }
+*:focus-visible { outline: 2px solid #3a863e; outline-offset: 2px; border-radius: 4px; }
+
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
   font-family: 'Montserrat';
